# browser-cookies

./: README.md  pyproject.toml  setup.py
src/: __init__.py  __main__.py
tests/: test_browsers.py
tests/utils/: __init__.py  browser_paths.py  driver_version.py
